--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="button_cikisyap">Çıkış Yap</string>
     <string name="button_foto">Fotoğraf Yükle</string>
     <string name="button_fotogor">Fotoğraf(ları) Görüntüle</string>
-    <string name="tv_email">Email: </string>
+    <string name="tv_name">Merhaba, </string>
 </resources>
